kubernetes/onto/onto-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onto-deployment
  labels:
    app: onto
spec:
  replicas: 2
  selector:
    matchLabels:
      app: onto
  template:
    metadata:
      labels:
        app: onto
    spec:
      containers:
      - name: onto
        image: renciorg/green-onto_gunicorn
        ports:
        #  - containerPort: 6001
        #    name: http
