kubernetes/onto/onto.yaml
apiVersion: v1
kind: Pod
metadata:
  name: onto
  labels:
    service: onto
    app: onto
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - name: onto
    image: renciorg/green-onto_gunicorn
    ports:
    resources:
      requests:
        memory: 200Mi
      limits:
        memory: 1Gi
  restartPolicy: OnFailure
